--- a/src/app/flag.css
+++ b/src/app/flag.css
@@ -1,26 +1,26 @@
 html {
   font-family: sans-serif;
-  font-size: 14px;
+  /*font-size: 14px;*/
 }
 
-table {
-  border: 1px solid lightgray;
-}
+/*table {*/
+/*  border: 1px solid lightgray;*/
+/*}*/
 
-tbody {
-  border-bottom: 1px solid lightgray;
-}
+/*tbody {*/
+/*  border-bottom: 1px solid lightgray;*/
+/*}*/
 
-th {
-  border-bottom: 1px solid lightgray;
-  border-right: 1px solid lightgray;
-  padding: 2px 4px;
-}
+/*th {*/
+/*  border-bottom: 1px solid lightgray;*/
+/*  border-right: 1px solid lightgray;*/
+/*  padding: 2px 4px;*/
+/*}*/
 
-tfoot {
-  color: gray;
-}
+/*tfoot {*/
+/*  color: gray;*/
+/*}*/
 
-tfoot th {
-  font-weight: normal;
-}
+/*tfoot th {*/
+/*  font-weight: normal;*/
+/*}*/
